configs/ingressroute-metadiversions-web.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gearforce-s-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`gf.metadiversions.com`) || Host(`gearforce.metadiversions.com`) || Host(`hg.metadiversions.com`)
      services:
        - kind: Service
          name: gf1-gearforce
          port: 80
      middlewares:
        - name: redirectscheme
