configs/ingressroute-metadiversions-websecure.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gearforce-s-https
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gf.metadiversions.com`) || Host(`gearforce.metadiversions.com`)
      services:
        - kind: Service
          name: gf1-gearforce
          port: 80
      middlewares:
        - name: security
  tls:
    certResolver: le
    domains:
      - main: gearforce.metadiversions.com
      - main: gf.metadiversions.com
        
    options:
      name: tlsoptions
