configs/ingressroute-web.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gearforce-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`gearforce.metadiversion.com`)
      services:
        - kind: Service
          name: gf1-gearforce
          port: 80
      middlewares:
        - name: redirectscheme
